<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quizActivityRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_quiz_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:text="@string/show_username"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="#85E9F6"
        android:padding="4dp"
        android:text="@string/button_setting"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:padding="4dp"
        android:text="@string/button_log_out"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/end_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_View_End_Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textSize="36sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/button_Try_Again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#8BDF5F"
            android:padding="15dp"
            android:text="@string/button_Try_Again"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="18sp"
            tools:text="timer" />

        <TextView
            android:id="@+id/text_View_Scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="20dp"
            android:padding="8dp"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_View_Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/true_false_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/button_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:padding="4dp"
                android:text="@string/button_false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:padding="4dp"
                android:text="@string/button_true"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/arrows_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/button_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_first"
                android:src="@drawable/ic_arrow_double_left" />

            <ImageButton
                android:id="@+id/button_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/button_previous"
                android:src="@drawable/ic_arrow_left" />

            <ImageButton
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/button_next"
                android:src="@drawable/ic_arrow_right" />

            <ImageButton
                android:id="@+id/button_last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_last"
                android:src="@drawable/ic_arrow_double_right" />
        </LinearLayout>

        <Button
            android:id="@+id/button_cheat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/button_cheat"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>