<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayoutLoginInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/hint_username"
            android:inputType="text"
            tools:text="username" />

        <EditText
            android:id="@+id/editTextLoginNumberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="70dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="numberPassword"
            tools:text="password" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLoginButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="60dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginButtonLogin"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_Login"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/loginButtonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_sign_up"
            android:textAllCaps="false" />
    </LinearLayout>

</FrameLayout>